app/assets/stylesheets/dashboard.scss
#dashboard-page {

  margin: 25px;

  #auto-refresh-container, #minute-columns-container {
    @include edged-panel();
    @include right-align(15px);
      width: 90px;
     margin: { bottom: 10px; right: 12px; }
    display: block;
    #text { width: 57px; }
  }

  #progress-button-container, #download-button-container {
    @include right-align(15px);
    text-align: right;
    #progress-button, #download-button {
      @include non-code-font();
       font-size: 1em;
         padding: { bottom: 3px; left: 9px; right: 9px; }
          margin: { bottom: 2px; }
      text-align: right;
    }
  }

  #traffic-lights {
         width: 1000px;
    overflow-x: scroll;
    overflow-y: auto;
    .time-tick {
      display: block;
      @include non-code-font();
      text-align: center;
      font-size: 10px;
      color: lighten(black,60%);
      $down-triangle: "\25BF";
      &:after { content: $down-triangle; }
    }
    .age {
      display: block;
      @include non-code-font();
      text-align: center;
      font-size: 13px;
      color: lighten(black,90%);
    }
    .column {
      padding: 0px;
       border: { bottom: dotted lighten($darker-color, 3%) 1px; }
      &.odd  { background: lighten($darker-color,  5%); }
      &.even { background: lighten($darker-color, 11%); }
    }
    .collapsed-multi-gap {
        display: inline-block;
      font-size: 18px;
          color: lighten(black,60%);
         margin: { left: 3px; right: 3px; bottom: 10px; }
      &:after { content: "\2026"; } // ellipsis
    }
    .gap {
        font-size: 0.7em;
      $thin-space: "\2009";
       text-align: center;
      &:after { content: $thin-space; }
    }
    .traffic-light-count { cursor: default; }
  }

}

#progress-dialog {
  padding-top: 0px;
  .animal.odd  { background: lighten($darker-color,3%); }
  .animal.even { background: lighten($darker-color,6%); }
  .progress {
    white-space: nowrap;
        padding: { left: 5px; right: 5px; }
  }
}

// - - - - - - - - - - - - - - - - - - - - - - - - - - -
// I've tried using .traffic-light-diff-tip as an outer tag
// eg
//    .traffic-light-diff-tip {
//      .tag { .. }
//      .traffic-light-image { ... }
//    }
// I can't get it to work...
// - - - - - - - - - - - - - - - - - - - - - - - - - - -

.traffic-light-diff-tip-tag {
  @include non-code-font;
       font-size: 12px;
         display: table-cell;
  vertical-align: middle;
}

.traffic-light-diff-tip-traffic-light-image {
  height: 22px;
   width: 22px;
}

.traffic-light-diff-tip-avatar-image {
  @include rounded-corner(4px);
   width: 30px !important;
  height: 30px !important;
}

.traffic-light-diff-tip-line-count-deleted, .traffic-light-diff-tip-line-count-added {
  @include rounded-corner(4px);
  @include right-align(0px);
  @include diff-line-count;
  @include non-code-font;
  color: $darker-color;
  border: 1px solid lighten($darker-color,6%);
}

.traffic-light-diff-tip-line-count-deleted {
  background: $diff-deleted-color;
}
.traffic-light-diff-tip-line-count-added {
  background: $diff-added-color;
}

